use java 8 for spring boot 2 tests